tests/ui/specialization/min_specialization/impl-on-nonexisting.stderr
error[E0412]: cannot find type `NonExistent` in this scope
  --> $DIR/impl-on-nonexisting.rs:4:16
   |
LL | impl Trait for NonExistent {}
   |                ^^^^^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0412`.
